fix spacing issue

--- a/src/components/Features/features.scss
+++ b/src/components/Features/features.scss
@@ -4,10 +4,11 @@
   @include flex(center, center);
   flex-wrap: wrap;
   max-width: min(100%, 80rem);
-  margin-top: 2rem;
+  margin-block: 2rem;
+
   @include desktop {
     gap: 2rem;
-    margin-top: 5rem;
+    margin-block: 10rem;
   }
 }
 
