--- a/src/components/Team/team.scss
+++ b/src/components/Team/team.scss
@@ -10,6 +10,7 @@
   @include desktop {
     flex-direction: row;
     gap: 2.5rem;
+    margin-bottom: 10rem;
   }
 }
 
